--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">The Pursuit<br> of the Extra-ordinary</h2>
+								<h2 class="major">The Pursuit of<br> the Extra-ordinary</h2>
 								<span class="image main"><img src="images/about.jpeg" alt="" /></span>
 								<p>I build the space where people and technology truly meet — not in theory, but in the real world, where ideas become experiences that make life work a little better. My focus is on designing intelligent systems that feel human: <b>intuitive</b>, <b>adaptive</b>, and <b>deeply connected</b> to the way we think and create.</p>
 								<p>To me, innovation is an act of empathy. It’s about crafting tools that understand us as much as we understand them — translating complexity into clarity and making intelligence feel alive.</p>
@@ -350,6 +350,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
