--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Alex Calò</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -80,7 +76,7 @@
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">The Relentless Pursuit<br> of the Extraordinary</h2>
+								<h2 class="major">The Pursuit<br> of the Extraordinary</h2>
 								<span class="image main"><img src="images/about.jpeg" alt="" /></span>
 								<p>I build the space where people and technology truly meet — not in theory, but in the real world, where ideas become experiences that make life work a little better. My focus is on designing intelligent systems that feel human: <b>intuitive</b>, <b>adaptive</b>, and <b>deeply connected</b> to the way we think and create.</p>
 								<p>To me, innovation is an act of empathy. It’s about crafting tools that understand us as much as we understand them — translating complexity into clarity and making intelligence feel alive.</p>
@@ -350,3 +346,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
