--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">The Convergence of<br> Engineering + Leadership</h2>
+								<h2 class="major">Engineering<br>+ Leadership</h2>
 								<span class="image main"><img src="images/ViceMedia.png" alt="VICE Media Toronto" /></span>
 								<h4>VICE MEDIA</h4>										
 								<span class="image main"><img src="images/ScotiaBank.png" alt="Scotiabank" /></span>
@@ -339,3 +339,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
