--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Alex Calò. Design in Toronto.</p>
+						<p class="copyright">&copy; Alex Calò. Designed in Toronto.</p>
 					</footer>
 
 			</div>
@@ -346,6 +346,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
