--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">The Architecture<br>of Execution</h2>
-								<p>There’s nothing quite like the rush of crafting a streamlined roadmap or a perfectly defined plan, knowing that every line of documentation is removing risk and accelerating the path to delivery. I’ve spent my entire career in the trenches of technical systems—engineering, and leading teams to deliver high-stakes, multi-million dollar builds. I know that elegance in a project plan is just as critical as elegance in the design itself. My obsession is driven by the satisfaction of seeing complexity resolved into profitable, on-time delivery.</p>
-								<p>My passion? It’s fixing that systemic friction and integrating my technical fluency directly into the leadership stack. It’s the thrill of partnering with developers and directors to master the constraints—whether they’re technical, budgetary, or regulatory—and then delivering projects that are technically sound and ruthlessly efficient. I approach every engagement not as a detached administrator, but with the mindset of an Execution Architect. My job is to prove that rigorous, technically-informed management is the single biggest KPI you can optimize for.</p>
-								<p>Ready to see the results of technical passion and process?<br>
-								Check out my <a href="#work">awesome work</a>.</p>
+								<p>There’s nothing quite like the rush of crafting a streamlined roadmap or a perfectly defined plan, knowing that every line of documentation is removing risk and accelerating the path to delivery. I’ve spent my entire career in the trenches of technical systems—engineering, and leading teams to deliver high-stakes, multi-million dollar builds. I know that elegance in a project plan is just as critical as elegance in the design itself.</p>
+								<p>My obsession is driven by the satisfaction of seeing complexity resolved into profitable, on-time delivery. My passion? It’s fixing that systemic friction and integrating tech fluency directly into the leadership stack. It’s the thrill of partnering with developers and directors to master the constraints—whether they’re technical, budgetary, or regulatory—and then delivering projects that are sound and ruthlessly efficient. I approach every engagement not as a detached administrator, but with the mindset of an Execution Architect. My job is to prove that rigorous, technically-informed management is the single biggest KPI you can optimize for. Ready to see the results? Check out my <a href="#work">awesome work</a>.</p>
 							</article>
 
 						<!-- Work -->
@@ -346,6 +344,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
