--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<div class="inner">
 								<h1>Alex Calò</h1>
 								<p>I don't just <b>love</b> the conceptualization of <b>projects</b>.<br> I’m obsessed with providing <u>strategic</u>, <u>scalable</u> wins.<br>
-								From <a href="#work"><b>Design</b></a> to <a href="https://www.linkedin.com/in/alexcalo/"><b>Governance</b></a>.<br/>
+								From <a href="#work"><b>Design</b></a> to <a href="https://www.onearcadia.online"><b>Governance</b></a>.<br/>
 								</p>
 							</div>
 						</div>
@@ -344,6 +344,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
